--- a/DevoirPhoneGap/www/css/index.css
+++ b/DevoirPhoneGap/www/css/index.css
@@ -161,3 +161,79 @@ li {
         text-decoration: none;
     }
 
+.btn_back {
+    background: #3489d9;
+    background-image: -webkit-linear-gradient(top, #3498db, #2980b9);
+    background-image: -moz-linear-gradient(top, #3498db, #2980b9);
+    background-image: -ms-linear-gradient(top, #3498db, #2980b9);
+    background-image: -o-linear-gradient(top, #3498db, #2980b9);
+    background-image: linear-gradient(to bottom, #3498db, #2980b9);
+    -webkit-border-radius: 28;
+    -moz-border-radius: 28;
+    border-radius: 28px;
+    font-family: Arial;
+    color: #ffffff;
+    font-size: 10px;
+    padding: 10px 20px 10px 20px;
+    text-decoration: none;
+}
+
+    .btn_back:hover {
+        background: #d93434;
+        background-image: -webkit-linear-gradient(top, #3cb0fd, #3498db);
+        background-image: -moz-linear-gradient(top, #3cb0fd, #3498db);
+        background-image: -ms-linear-gradient(top, #3cb0fd, #3498db);
+        background-image: -o-linear-gradient(top, #3cb0fd, #3498db);
+        background-image: linear-gradient(to bottom, #3cb0fd, #3498db);
+        text-decoration: none;
+    }
+
+.submit-button {
+    border: 1px solid #447314;
+    background: #6aa436;
+    background: -webkit-gradient(linear, left top, left bottom, from(#8dc059), to(#6aa436));
+    background: -webkit-linear-gradient(top, #8dc059, #6aa436);
+    background: -moz-linear-gradient(top, #8dc059, #6aa436);
+    background: -ms-linear-gradient(top, #8dc059, #6aa436);
+    background: -o-linear-gradient(top, #8dc059, #6aa436);
+    background-image: -ms-linear-gradient(top, #8dc059 0%, #6aa436 100%);
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    border-radius: 4px;
+    -webkit-box-shadow: rgba(255,255,255,0.4) 0 1px 0, inset rgba(255,255,255,0.4) 0 1px 0;
+    -moz-box-shadow: rgba(255,255,255,0.4) 0 1px 0, inset rgba(255,255,255,0.4) 0 1px 0;
+    box-shadow: rgba(255,255,255,0.4) 0 1px 0, inset rgba(255,255,255,0.4) 0 1px 0;
+    text-shadow: #addc7e 0 1px 0;
+    color: #31540c;
+    font-family: helvetica, serif;
+    padding: 8.5px 18px;
+    font-size: 14px;
+    text-decoration: none;
+    vertical-align: middle;
+}
+
+    .submit-button:hover {
+        border: 1px solid #447314;
+        text-shadow: #31540c 0 1px 0;
+        background: #6aa436;
+        background: -webkit-gradient(linear, left top, left bottom, from(#8dc059), to(#6aa436));
+        background: -webkit-linear-gradient(top, #8dc059, #6aa436);
+        background: -moz-linear-gradient(top, #8dc059, #6aa436);
+        background: -ms-linear-gradient(top, #8dc059, #6aa436);
+        background: -o-linear-gradient(top, #8dc059, #6aa436);
+        background-image: -ms-linear-gradient(top, #8dc059 0%, #6aa436 100%);
+        color: #fff;
+    }
+
+    .submit-button:active {
+        text-shadow: #31540c 0 1px 0;
+        border: 1px solid #447314;
+        background: #8dc059;
+        background: -webkit-gradient(linear, left top, left bottom, from(#6aa436), to(#6aa436));
+        background: -webkit-linear-gradient(top, #6aa436, #8dc059);
+        background: -moz-linear-gradient(top, #6aa436, #8dc059);
+        background: -ms-linear-gradient(top, #6aa436, #8dc059);
+        background: -o-linear-gradient(top, #6aa436, #8dc059);
+        background-image: -ms-linear-gradient(top, #6aa436 0%, #8dc059 100%);
+        color: #fff;
+    }
